[tool.poetry]
name = "decision-tree"
version = "0.1.0"
description = ""
authors = ["Niko <vlahovic.nikolai@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_tree"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
pyspark = "^3.3.1"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
